--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,29 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["airbnb", "airbnb/hooks", "airbnb-typescript"],
+  "parserOptions": {
+      "project": ["./tsconfig.json"]
+  },
+  "env": {
+      "node": true,
+      "es6": true,
+      "browser": true
+  },
+  "rules": {
+      "no-console": "off",
+      "react/function-component-definition": "off",
+      "@typescript-eslint/space-before-blocks": "off",
+      "import/no-extraneous-dependencies": "off",
+      "react/require-default-props": "off",
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "": "never",
+          "js": "never",
+          "jsx": "never",
+          "ts": "never",
+          "tsx": "never"
+        }
+     ]
+  }
 }
